refactor: ci 스크립트 명시적으로 수정
- as-is: ./gradlew build
- to-be: clean & build, ktlintcheck, test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,13 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+
+    - name: Gradle Clean & Build
+      run: ./gradlew clean build
+
+    - name: Check ktlint format
+      run: ./gradlew ktlintCheck
+
+    - name: Test with Gradle
+      run: ./gradlew test
+
