refactor: cicd 스크립트 바뀐 패키지명 적용
- muckpot으로 패키지명 변경 반영

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: muckpot api CI/CD script
 
 on:
   push:
@@ -41,7 +41,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          context: ./web1-api
+          context: ./muckpot-api
           push: true
           tags: muckpot/muckpot-api:${{ github.run_number }}
 
