--- a/muckpot-domain/src/main/resources/application-local.yml
+++ b/muckpot-domain/src/main/resources/application-local.yml
@@ -1,9 +1,13 @@
 spring:
   datasource:
-    driver-class-name:
-    url: jdbc:h2:mem:testdb;MODE=MySQL
-    username: sa
-    password:
+    url: jdbc:mysql://localhost:3306/testDB
+    username: root
+    password: admin
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
+    generate-ddl: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
