feat: dev 프로필 설정

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           context: ./muckpot-api
           push: true
+          args: --build-arg PROFILE=$ACTIVE_PROFILE
           tags: muckpot/muckpot-api:${{ github.run_number }}
 
   deploy:
