--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,8 +1,11 @@
-name: muckpot api CI/CD script
+name: muckpot dev api CI/CD script
 
 on:
   push:
-    branches: [ "main", "develop" ]
+    branches: [ "develop" ]
+
+env:
+  ACTIVE_PROFILE: "dev"
 
 permissions:
   contents: read
@@ -43,6 +46,7 @@ jobs:
         with:
           context: ./muckpot-api
           push: true
+          args: --build-arg PROFILE=$ACTIVE_PROFILE
           tags: muckpot/muckpot-api:${{ github.run_number }}
 
   deploy:
@@ -53,16 +57,15 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ubuntu
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
+          port: ${{ env.DEV_PORT }}
           script: |
+            sudo touch .env
+            echo "${{ secrets.ENV_VARS }}" | sudo tee .env > /dev/null
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api:${{ github.run_number }}
             docker stop $(docker ps -a -q)
-            docker run -d -p 8080:8080 ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api:${{ github.run_number }}
+            docker run --restart=unless-stopped -d -p ${{ env.DEV_PORT }}:${{ env.DEV_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api:${{ github.run_number }}
             docker rm $(docker ps -a -q --filter "status=exited")
             docker image prune -a -f
-
-
-
-
 
