refactor: mariadb 변경
- mariadb 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,17 +9,17 @@ services:
     environment:
       - TZ=Asia/Seoul
 
-#  mysql: mariadb로 변경 필요
-#      image: mysql:8.0
-#      container_name: web1Mysql
-#      ports:
-#        - 3306:3306
-#      environment:
-#        - MYSQL_DATABASE=testDB
-#        - MYSQL_ROOT_PASSWORD=admin
-#        - TZ=Asia/Seoul
-#      command:
-#        - --character-set-server=utf8mb4
-#        - --collation-server=utf8mb4_unicode_ci
-#      volumes:
-#        - ./mysqldata:/var/lib/mysql
+  mysql:
+      image: mariadb:10
+      container_name: web1Maria
+      ports:
+        - 3306:3306
+      environment:
+        - MYSQL_DATABASE=muckpot_local
+        - MYSQL_ROOT_PASSWORD=admin
+        - TZ=Asia/Seoul
+      command:
+        - --character-set-server=utf8mb4
+        - --collation-server=utf8mb4_unicode_ci
+      volumes:
+        - ./mariadata:/var/lib/maria
