--- a/muckpot-domain/src/main/resources/application-local.yml
+++ b/muckpot-domain/src/main/resources/application-local.yml
@@ -1,13 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/testDB
+    url: jdbc:mariadb://localhost:3306/muckpot_local
     username: root
     password: admin
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     generate-ddl: true
     properties:
       hibernate:
-        dialect: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
+        dialect: org.hibernate.spatial.dialect.mariadb.MariaDB103SpatialDialect
