--- a/muckpot-domain/src/test/resources/application.yml
+++ b/muckpot-domain/src/test/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
-    url: jdbc:tc:mysql:8:///
+    url: jdbc:tc:mariadb:10.5:///
 
   jpa:
     hibernate:
@@ -9,4 +9,4 @@ spring:
     generate-ddl: true
     properties:
       hibernate:
-        dialect: org.hibernate.spatial.dialect.mysql.MySQL56InnoDBSpatialDialect
+        dialect: org.hibernate.spatial.dialect.mariadb.MariaDB103SpatialDialect
