--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     environment:
       - TZ=Asia/Seoul
 
-  mysql:
+  mariadb:
       image: mariadb:10
       container_name: web1Maria
       ports:
