refactor: OSIV false 설정
- 실행시 경고 떠서 false 설정

--- a/muckpot-api/src/main/resources/application.yml
+++ b/muckpot-api/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   profiles:
     active: local
+
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+
+  jpa:
+    open-in-view: false
