refactor: dev db rds 변경 - dev db rds 변경 - env file에 RDS 관련 변수 추가

--- a/muckpot-domain/src/main/resources/application-dev.yml
+++ b/muckpot-domain/src/main/resources/application-dev.yml
@@ -1,11 +1,13 @@
 spring:
   datasource:
-    driver-class-name:
-    url: jdbc:h2:mem:testdb;MODE=MySQL
-    username: sa
-    password:
+    url: jdbc:mariadb://${RDS_DEV_URL}/${RDS_DEV_DB_NAME}
+    username: ${RDS_DEV_ID}
+    password: ${RDS_DEV_PW}
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
-
-## 추후 RDS로 연동
+      ddl-auto: update # TODO DDL 완성 후 해당 옵션 변경해주어야 함
+    generate-ddl: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.spatial.dialect.mariadb.MariaDB103SpatialDialect
