Feat/22 create entity (#26)
* feat: .env 설정

- .env 설정 후 기존 민감정보 값 매핑
- .env파일 .gitignore에 추가
- dev 프로필 cicd 스크립트에
.env 동기화 로직 추가

* fix: yml 파일 수정

- api모듈 profile 필요 없어서 제거 (active 설정만 하면 됨)
- domain모듈 application.yml 필요 없어서 제거
- 로컬 h2 설정 mysql로 변경 함

* feat: noArg, 테스트 컨테이너 추가

- Entity 정의시 noArg 필요하여 플러그인 추가
- 테스트 컨테이터 구축

* feat: Entity 추가 및 기본 테스트

- Entity 추가 및 기본 테스트

* refactor: mariadb 변경

- mariadb 변경

* test: @SpringBootTest 제거

- 모듈이 변경되면서 의미없어 제거

* fix: ignore 에 mariadb volume 추가

- ignore 에 mariadb volume 추가

* refactor: 어노테이션 중복 Retention 선언 제거

- @DataJpaTest에 포함되어 제거

* docs: db 서비스 이름변경

- db 서비스 이름변경

* feat: image_url, state 필드 추가

- user.image_url 추가
- 모든 Entity 에 state 추가
  - soft delete 위함

* refactor: OSIV false 설정

- 실행시 경고 떠서 false 설정

* refactor: dev db rds 변경
- dev db rds 변경
- env file에 RDS 관련 변수 추가

---------

Co-authored-by: bryn <cofls6581@naver.com>

--- a/muckpot-domain/src/test/resources/application.yml
+++ b/muckpot-domain/src/test/resources/application.yml
@@ -1,9 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/muckpot_local
-    username: root
-    password: admin
-    driver-class-name: org.mariadb.jdbc.Driver
+    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+    url: jdbc:tc:mariadb:10.5:///
+
   jpa:
     hibernate:
       ddl-auto: update
