--- a/muckpot-domain/src/main/resources/application-local.yml
+++ b/muckpot-domain/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/muckpot_local
+    url: jdbc:mariadb://localhost:3306/muckpot_local?allowPublicKeyRetrieval=true&useSSL=false
     username: root
     password: admin
     driver-class-name: org.mariadb.jdbc.Driver
