fix: ec2 서버에 로그파일 생성되지 않아 옵션 추가
- 기존에 로그파일이 도커 컨테이너 내부에 생성되어 -v 옵션 추가

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -65,6 +65,6 @@ jobs:
             echo "${{ secrets.ENV_VARS }}" | sudo tee .env > /dev/null
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api:${{ github.run_number }}
             docker stop $(docker ps -a -q)
-            docker run --restart=unless-stopped -d -p ${{ secrets.DEV_PORT }}:${{ secrets.DEV_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api:${{ github.run_number }}
+            docker run -v ${HOME}/logs:/logs --restart=unless-stopped -d -p ${{ secrets.DEV_PORT }}:${{ secrets.DEV_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api:${{ github.run_number }}
             docker rm $(docker ps -a -q --filter "status=exited")
             docker image prune -a -f
