feat: 이메일 인증 요청 API 초안
- google smtp 연동
- 인증 번호 난수 생성
- redis 서버에 인증 번호 저장
- JavaMailSender를 통한 이메일 전송

--- a/muckpot-infra/src/main/resources/application-infra.yml
+++ b/muckpot-infra/src/main/resources/application-infra.yml
@@ -1,4 +1,19 @@
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: ${GOOGLE_SMTP_PORT}
+    username: ${GOOGLE_SMTP_USERNAME}
+    password: ${GOOGLE_SMTP_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
+---
+
+spring:
   config:
     activate:
       on-profile: local
