--- a/muckpot-api/src/main/resources/application.yml
+++ b/muckpot-api/src/main/resources/application.yml
@@ -11,5 +11,9 @@ spring:
   jpa:
     open-in-view: false
 
+jwt:
+  issuer: "muckpot"
+  secret-key: ${JWT_SECRET_KEY:secret}
+
 logging:
   config: classpath:logback-${spring.config.activate.on-profile}.xml
