--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
+    - name: Docker Container Run
+      run: docker-compose up -d
+
     - name: Gradle Clean & Build
       run: ./gradlew clean build
 
