feat: permitAll 옵션 추가
- 테스트 환경에서 인증처리 제외시킬 수 있는 옵션
- 배포 시 false 유지되어야 함

--- a/muckpot-api/src/main/resources/application.yml
+++ b/muckpot-api/src/main/resources/application.yml
@@ -17,3 +17,7 @@ jwt:
 
 logging:
   config: classpath:logback-${spring.config.activate.on-profile}.xml
+
+api:
+  option:
+    permit-all: false # 배포: false, 테스트 : true
