feat: 35 login 기능 구현 (#38)
* feat: Security 추가 및 설정

- Security 추가 및 설정

* feat: Jwt 발급 및 검증 구현

- Jwt 발급 및 검증 구현

* fix: 서브카테고리, 이미지url nullable 변경

- 서브카테고리, 이미지url nullable 변경

* feat: 로그인 기능 구현

- 로그인 기능 구현

* feat: secret key 환경변수 로 관리

- secret key 환경변수 로 관리

* feat: 인가 처리를 위한 Security 객체 정의

- 인가 처리를 위한 Security 객체 정의

* feat: 인증 및 인가 실패시 예외 처리

- 인증 및 인가 실패시 예외 처리
- 인증되지 않은 경우에도 체크가 필요하여 EntryPoint 구현
  - AccessDeniedHandler 는 인증이 안되었으면 타지않음.

* feat: refresh 토큰 redis 저장 구현

- key: email, value: refresh 토큰

* feat: 공통 ControllerAdvice 추가

- 공통 ControllerAdvice 추가

* chore: 성공 message 제외

- 성공 message 제외

* chore: swagger 샘플 추가

- swagger 샘플 추가

* feat: 테스트 환경 구성 추가

- QueryDSL 테스트 위한 TestConfiguration 추가
- 통합 테스트 위해 api 모듈에서 local 수행되도록 설정

* ci: ci/cd 스크립트에 docker-compose 실행로직 추가

- ci/cd 스크립트에 docker-compose 실행로직 추가

* fix: docker-compose 에서 환경변수 제거

- docker-compose 에서 환경변수 제거

* feat: permitAll 옵션 추가

- 테스트 환경에서 인증처리 제외시킬 수 있는 옵션
- 배포 시 false 유지되어야 함

* chore: 디버깅 레벨 조정

- 최초 로그인 할 때 Exception 메시지 출력되어 info 변경
- 예외 확인은 debug 레벨로 추가

--- a/muckpot-api/src/test/resources/application.yml
+++ b/muckpot-api/src/test/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   profiles:
+    active: local
     include:
       - domain
       - infra
-
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -13,11 +13,8 @@ spring:
 
 jwt:
   issuer: "muckpot"
-  secret-key: ${JWT_SECRET_KEY:secret}
-
-logging:
-  config: classpath:logback-${spring.config.activate.on-profile}.xml
+  secret-key: "test-secret"
 
 api:
   option:
-    permit-all: false # 배포: false, 테스트 : true
+    permit-all: false
