fix: test property 에러 해결

--- a/muckpot-infra/src/main/resources/application-infra.yml
+++ b/muckpot-infra/src/main/resources/application-infra.yml
@@ -1,9 +1,9 @@
 spring:
   mail:
     host: smtp.gmail.com
-    port: ${GOOGLE_SMTP_PORT}
-    username: ${GOOGLE_SMTP_USERNAME}
-    password: ${GOOGLE_SMTP_PASSWORD}
+    port: ${GOOGLE_SMTP_PORT:8080}
+    username: ${GOOGLE_SMTP_USERNAME:test}
+    password: ${GOOGLE_SMTP_PASSWORD:test}
     properties:
       mail:
         smtp:
