feat: 37 회원가입 이메일 인증 구현 (#40)
* feat: 이메일 인증 요청 API 초안

- google smtp 연동
- 인증 번호 난수 생성
- redis 서버에 인증 번호 저장
- JavaMailSender를 통한 이메일 전송

* feat: 발신자 이메일 변경

* feat: 잔존한 유효 인증 요청 처리 추가

- 기존 인증 코드 redis에서 삭제 후 새 인증코드 발급

* feat: MethodArgumentNotValidException 에러 핸들링

* style: 컨벤션 통일

- 패키징 구조 맞추기
- 스웨게 응답 예시 추가
- 중복된 에러 처리 하나로 통합

* feat: 이메일 인증 검증 API

- 이메일 인증 검증 API 개발
- 스웨거 응답 예시 추가
- 이메일 인증 요청 API 응답값 추가

* refactor: 204 http code 바디 제거

* refactor: 204 request nullable 처리 변경

* fix: test property 에러 해결

* fix: 비교 연산 및 소나클라우드 보안 에러 수정

* style: 주석 정리

* refactor: 코드 개선

- 매직 넘버 상수 처리
- apply 적용
- it 키워드 사용

* fix: apply 함수 롤백

* refactor: apply 함수 적용

--- a/muckpot-infra/src/main/resources/application-infra.yml
+++ b/muckpot-infra/src/main/resources/application-infra.yml
@@ -1,4 +1,13 @@
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: ${GOOGLE_SMTP_PORT:8080}
+    username: ${GOOGLE_SMTP_USERNAME:test}
+    password: ${GOOGLE_SMTP_PASSWORD:test}
+
+---
+
+spring:
   config:
     activate:
       on-profile: local
