feat: 먹팟 삭제 api 구현
- 먹팟 삭제시 참가목록 제거
- 자신의 글만 삭제 가능

--- a/muckpot-domain/src/test/resources/application.yml
+++ b/muckpot-domain/src/test/resources/application.yml
@@ -10,3 +10,5 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.spatial.dialect.mariadb.MariaDB103SpatialDialect
+        format_sql: true
+    show_sql: true
