--- a/muckpot-domain/src/main/resources/application-domain.yml
+++ b/muckpot-domain/src/main/resources/application-domain.yml
@@ -14,6 +14,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.spatial.dialect.mariadb.MariaDB103SpatialDialect
+        format_sql: true
+    show-sql: true
 
 ---
 
