feat: PROD CORS ORIGIN 추가
- ORIGIN 관리 env로 분리

--- a/muckpot-api/src/main/resources/application.yml
+++ b/muckpot-api/src/main/resources/application.yml
@@ -21,3 +21,6 @@ logging:
 api:
   option:
     permit-all: false # 배포: false, 테스트 : true
+    allowed-origins:
+      ${LOCAL_ORIGIN:localOrigin},
+      ${PROD_ORIGIN:prodOrigin}
