--- a/muckpot-api/src/main/resources/application.yml
+++ b/muckpot-api/src/main/resources/application.yml
@@ -23,4 +23,5 @@ api:
     permit-all: false # 배포: false, 테스트 : true
     allowed-origins:
       ${LOCAL_ORIGIN:localOrigin},
-      ${PROD_ORIGIN:prodOrigin}
+      ${PROD_ORIGIN:prodOrigin},
+      ${PROD_ORIGIN_2:prodOrigin2}
