--- a/muckpot-api/src/main/resources/application.yml
+++ b/muckpot-api/src/main/resources/application.yml
@@ -21,3 +21,7 @@ logging:
 api:
   option:
     permit-all: false # 배포: false, 테스트 : true
+    allowed-origins:
+      ${LOCAL_ORIGIN:localOrigin},
+      ${PROD_ORIGIN:prodOrigin},
+      ${PROD_ORIGIN_2:prodOrigin2}
