fix: 배포 스크립트 수정

--- a/.github/workflows/cicd_prod.yml
+++ b/.github/workflows/cicd_prod.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   ACTIVE_PROFILE: "prod"
-  IMAGE_NAME: "muckpot-api"-$ACTIVE_PROFILE
+  IMAGE_NAME: "muckpot-api"-${ACTIVE_PROFILE}
 
 permissions:
   contents: read
