--- a/.github/workflows/cicd_dev.yml
+++ b/.github/workflows/cicd_dev.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   ACTIVE_PROFILE: "dev"
-  IMAGE_NAME: "muckpot-api"-$ACTIVE_PROFILE
+  IMAGE_NAME: "muckpot-api"-${ACTIVE_PROFILE}
 
 permissions:
   contents: read
