--- a/.github/workflows/cicd_prod.yml
+++ b/.github/workflows/cicd_prod.yml
@@ -42,7 +42,7 @@ jobs:
           context: ./muckpot-api
           push: true
           args: --build-arg PROFILE=$ACTIVE_PROFILE
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME-$ACTIVE_PROFILE:${{ github.run_number }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
 
   deploy:
     needs: build
@@ -59,8 +59,8 @@ jobs:
             cd /var/www/html/api
             sudo touch .env
             echo "${{ secrets.ENV_VARS }}" | sudo tee .env > /dev/null
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME-$ACTIVE_PROFILE:${{ github.run_number }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
             docker stop $(docker ps -a -q)
-            docker run -v ${HOME}/logs:/logs --restart=unless-stopped -d -p ${{ secrets.PROD_PORT }}:${{ secrets.PROD_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME-$ACTIVE_PROFILE:${{ github.run_number }}
+            docker run -v ${HOME}/logs:/logs --restart=unless-stopped -d -p ${{ secrets.PROD_PORT }}:${{ secrets.PROD_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
             docker rm $(docker ps -a -q --filter "status=exited")
             docker image prune -a -f
