fix: 배포 스크립트 수정

--- a/.github/workflows/cicd_dev.yml
+++ b/.github/workflows/cicd_dev.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: EC2 Docker Run
-        uses: appleboy/ssh-action@v1.0.4
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_DEV_HOST }}
           username: ${{ secrets.EC2_DEV_USER }}
