fix: 배포 스크립트 수정

--- a/.github/workflows/cicd_dev.yml
+++ b/.github/workflows/cicd_dev.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           host: ${{ secrets.EC2_DEV_HOST }}
           username: ${{ secrets.EC2_DEV_USER }}
-          key: ${{ secrets.EC2_DEV_KEY }}
+          key: ${{ secrets.EC2_KEY }}
           port: ${{ env.DEV_PORT }}
           script: |
             cd /var/www/html/api
