--- a/.github/workflows/cicd_dev.yml
+++ b/.github/workflows/cicd_dev.yml
@@ -6,7 +6,6 @@ on:
 
 env:
   ACTIVE_PROFILE: "dev"
-  IMAGE_NAME: "muckpot-api"
 
 permissions:
   contents: read
@@ -42,7 +41,7 @@ jobs:
           context: ./muckpot-api
           push: true
           args: --build-arg PROFILE=$ACTIVE_PROFILE
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
+          tags: muckpot/muckpot-api-dev:${{ github.run_number }}
 
   deploy:
     needs: build
@@ -53,14 +52,14 @@ jobs:
         with:
           host: ${{ secrets.EC2_DEV_HOST }}
           username: ${{ secrets.EC2_DEV_USER }}
-          key: ${{ secrets.EC2_KEY }}
+          key: ${{ secrets.EC2_DEV_KEY }}
           port: ${{ env.DEV_PORT }}
           script: |
             cd /var/www/html/api
             sudo touch .env
             echo "${{ secrets.ENV_VARS }}" | sudo tee .env > /dev/null
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api-dev:${{ github.run_number }}
             docker stop $(docker ps -a -q)
-            docker run -v ${HOME}/logs:/logs --restart=unless-stopped -d -p ${{ secrets.DEV_PORT }}:${{ secrets.DEV_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
+            docker run -v ${HOME}/logs:/logs --restart=unless-stopped -d -p ${{ secrets.DEV_PORT }}:${{ secrets.DEV_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api-dev:${{ github.run_number }}
             docker rm $(docker ps -a -q --filter "status=exited")
             docker image prune -a -f
