--- a/.github/workflows/cicd_prod.yml
+++ b/.github/workflows/cicd_prod.yml
@@ -1,12 +1,11 @@
-name: muckpot prod api CI/CD script
+name: muckpot dev api CI/CD script
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
 
 env:
-  ACTIVE_PROFILE: "prod"
-  IMAGE_NAME: "muckpot-api"
+  ACTIVE_PROFILE: "dev"
 
 permissions:
   contents: read
@@ -42,7 +41,7 @@ jobs:
           context: ./muckpot-api
           push: true
           args: --build-arg PROFILE=$ACTIVE_PROFILE
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
+          tags: muckpot/muckpot-api-prod:${{ github.run_number }}
 
   deploy:
     needs: build
@@ -51,16 +50,16 @@ jobs:
       - name: EC2 Docker Run
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
+          host: ${{ secrets.EC2_PROD_HOST }}
+          username: ${{ secrets.EC2_PROD_USER }}
+          key: ${{ secrets.EC2_PROD_KEY }}
           port: ${{ env.PROD_PORT }}
           script: |
             cd /var/www/html/api
             sudo touch .env
             echo "${{ secrets.ENV_VARS }}" | sudo tee .env > /dev/null
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api-prod:${{ github.run_number }}
             docker stop $(docker ps -a -q)
-            docker run -v ${HOME}/logs:/logs --restart=unless-stopped -d -p ${{ secrets.PROD_PORT }}:${{ secrets.PROD_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}-${{ env.ACTIVE_PROFILE }}:${{ github.run_number }}
+            docker run -v ${HOME}/logs:/logs --restart=unless-stopped -d -p ${{ secrets.PROD_PORT }}:${{ secrets.PROD_PORT }} --env-file .env ${{ secrets.DOCKERHUB_USERNAME }}/muckpot-api-prod:${{ github.run_number }}
             docker rm $(docker ps -a -q --filter "status=exited")
             docker image prune -a -f
