fix: 배포 스크립트 수정

--- a/.github/workflows/cicd_prod.yml
+++ b/.github/workflows/cicd_prod.yml
@@ -1,11 +1,11 @@
-name: muckpot dev api CI/CD script
+name: muckpot prod api CI/CD script
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ "main" ]
 
 env:
-  ACTIVE_PROFILE: "dev"
+  ACTIVE_PROFILE: "prod"
 
 permissions:
   contents: read
