--- a/muckpot-api/Dockerfile
+++ b/muckpot-api/Dockerfile
@@ -6,7 +6,7 @@ ARG JAR_FILE=build/libs/*.jar
 
 COPY ${JAR_FILE} app.jar
 
-ARG PROFILE=dev
+# ARG PROFILE=dev
 ENV PROFILE=${PROFILE}
 
 ENTRYPOINT ["java","-Dspring.profiles.active=${PROFILE}","-jar","/app.jar"]
