fix: profile 설정 변경

--- a/muckpot-api/Dockerfile
+++ b/muckpot-api/Dockerfile
@@ -3,11 +3,10 @@ FROM openjdk:11
 EXPOSE 8080
 
 ARG JAR_FILE=build/libs/*.jar
-
+ARG PROFILE
 COPY ${JAR_FILE} app.jar
 
 # ARG PROFILE=dev
-ARG PROFILE
 ENV PROFILE=${PROFILE}
 
-ENTRYPOINT ["java","-Dspring.profiles.active=${PROFILE}","-jar","/app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=${PROFILE}", "-Duser.timezone=Asia/Seoul", "-jar", "/app.jar"]
