--- a/.github/workflows/cicd_prod.yml
+++ b/.github/workflows/cicd_prod.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           context: ./muckpot-api
           push: true
-          args: --build-arg PROFILE=$ACTIVE_PROFILE
+          build-args: PROFILE=$ACTIVE_PROFILE
           tags: muckpot/muckpot-api-prod:${{ github.run_number }}
 
   deploy:
