--- a/muckpot-api/Dockerfile
+++ b/muckpot-api/Dockerfile
@@ -3,9 +3,10 @@ FROM openjdk:11
 EXPOSE 8080
 
 ARG JAR_FILE=build/libs/*.jar
-ARG ARG_PROFILE
+
 COPY ${JAR_FILE} app.jar
 
-ENV PROFILE=${ARG_PROFILE}
+ARG PROFILE=prod
+ENV PROFILE=${PROFILE}
 
 ENTRYPOINT ["java", "-Dspring.profiles.active=${PROFILE}", "-Duser.timezone=Asia/Seoul", "-jar", "/app.jar"]
