--- a/.github/workflows/cicd_prod.yml
+++ b/.github/workflows/cicd_prod.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 env:
-  ACTIVE_PROFILE: "prod"
+  PROFILE: "prod"
 
 permissions:
   contents: read
@@ -40,7 +40,7 @@ jobs:
         with:
           context: ./muckpot-api
           push: true
-          args: --build-arg PROFILE=$ACTIVE_PROFILE
+          args: --build-arg PROFILE=${{ env.PROFILE }}
           tags: muckpot/muckpot-api-prod:${{ github.run_number }}
 
   deploy:
