fix: 배포스크립트 프로필 설정 수정

--- a/muckpot-api/Dockerfile
+++ b/muckpot-api/Dockerfile
@@ -6,4 +6,7 @@ ARG JAR_FILE=build/libs/*.jar
 
 COPY ${JAR_FILE} app.jar
 
+ARG PROFILE=prod
+ENV PROFILE=${PROFILE}
+
 ENTRYPOINT ["java", "-Dspring.profiles.active=${PROFILE}", "-Duser.timezone=Asia/Seoul", "-jar", "/app.jar"]
