--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,17 +17,20 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-    - name: Cache SonarCloud packages
+
+    - name: Cache Gradle packages
       uses: actions/cache@v3
       with:
-        path: ~/.sonar/cache
-        key: ${{ runner.os }}-sonar
-        restore-keys: ${{ runner.os }}-sonar
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+        restore-keys: ${{ runner.os }}-gradle
+
     - name: test and analyze
       run: ./gradlew test sonar --info --stacktrace --no-daemon
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
     - name: Gradle Clean & Build
       run: ./gradlew clean build
 
