--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [ "main", "develop" ]
 
+env:
+  # 7 GiB by default on GitHub, setting to 6 GiB
+  # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
+  NODE_OPTIONS: --max-old-space-size=6144
+
 jobs:
   build:
     name: Build and analyze
@@ -12,6 +17,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: Set Swap Space
+        uses: pierotofy/set-swap-space@master
+        with:
+          swap-size-gb: 10
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
