feat: ci 스크립트 sonar task 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,6 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
         restore-keys: ${{ runner.os }}-gradle
 
-    - name: Gradle Clean & Build
-      run: ./gradlew clean build
+    - name: Gradle Clean & Build & Sonar
+      run: ./gradlew clean build sonar
 
