--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
 
+    - name: Gradle Clean & Build
+      run: ./gradlew clean build
+
     - name: Cache SonarCloud packages
       uses: actions/cache@v3
       with:
@@ -33,6 +36,6 @@ jobs:
         key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
         restore-keys: ${{ runner.os }}-gradle
 
-    - name: Gradle Clean & Build & Sonar
-      run: ./gradlew clean build sonar
+    - name: Gradle Sonar
+      run: ./gradlew sonar
 
