test: 기존 코드로 원복

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,5 @@ jobs:
         restore-keys: ${{ runner.os }}-gradle
 
     - name: Gradle Sonar
-      run: ./gradlew sonar -Dorg.gradle.jvmargs="-Xmx2g"
+      run: ./gradlew sonar
 
