--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,8 @@ jobs:
         restore-keys: ${{ runner.os }}-gradle
 
     - name: Gradle Sonar
-      run: ./gradlew sonar
+      run: ./gradlew sonar -Dorg.gradle.jvmargs="-Xmx2g"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
