test: jvm 메모리 원복 후 ci 스크립트 옵션으로만 oom 테스트

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         restore-keys: ${{ runner.os }}-gradle
 
     - name: Gradle Sonar
-      run: ./gradlew sonar -Dorg.gradle.jvmargs="-Xmx2g"
+      run: ./gradlew sonar -Dorg.gradle.jvmargs="-Xmx2g" --stacktrace --no-daemon
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
