--- a/muckpot-api/src/main/resources/application.yml
+++ b/muckpot-api/src/main/resources/application.yml
@@ -23,8 +23,11 @@ api:
     permit-all: false # 배포: false, 테스트 : true
     allowed-origins:
       ${LOCAL_ORIGIN:localOrigin},
-      ${DEV_ORIGIN:prodOrigin},
-      ${DEV_ORIGIN_2:prodOrigin2}
+      ${DEV_ORIGIN:devOrigin},
+      ${DEV_ORIGIN_2:devOrigin2},
+      ${DEV_ORIGIN_3:devOrigin3},
+      ${DEV_ORIGIN_4:devOrigin4}
+
 
 ---
 
@@ -42,4 +45,6 @@ api:
     permit-all: false
     allowed-origins:
       ${PROD_ORIGIN:prodOrigin},
-      ${PROD_ORIGIN_2:prodOrigin2}
+      ${PROD_ORIGIN_2:prodOrigin2},
+      ${PROD_ORIGIN_3:prodOrigin3},
+      ${PROD_ORIGIN_4:prodOrigin4}
